# tienda_del_alma_api

./: .env.example  .gitignore  CMakeLists.txt  createTableExample.cpp  example.env  main.cpp
config/: auth0_public.pem
include/auth/: Authentication.h
include/controllers/: AddressController.h  AuthController.h  AuthUtils.h  CarrierController.h  CategoryController.h  InventoryController.h  OrderController.h  PaypalController.h  ProductController.h  UserController.h
include/controllers/auth/: AuthController.h
include/db/: DatabaseConnection.h  DatabaseInitializer.h
include/entities/: Address.h  Carrier.h  Category.h  DecodedUser.h  Order.h  OrderItem.h  OrderProduct.h  PaymentAttempt.h  Product.h  User.h  inventory.h
include/env/: EnvLoader.h
include/middleware/: AuthMiddleware.h
include/model/: AddressModel.h  CarrierModel.h  CategoryModel.h  InventoryModel.h  OrderItemModel.h  OrderModel.h  PaymentAttemptModel.h  ProductModel.h  UserModel.h
include/router/: Router.h
include/server/: Server.h
include/services/: PaypalService.h
include/services/jwt/: Auth0JwtUtils.h  JwtService.h
include/utils/: Errors.h  LoadAuth.h  UtilsOwner.h
src/auth/: Authentication.cpp
src/controllers/: AddressController.cpp  AuthController.cpp  AuthUtils.cpp  CarrierController.cpp  CategoryController.cpp  InventoryController.cpp  OrderController.cpp  PaypalController.cpp  ProductController.cpp  UserController.cpp
src/controllers/auth/: AuthController.cpp
src/db/: DatabaseConnection.cpp  DatabaseInitializer.cpp
src/env/: EnvLoader.cpp
src/middleware/: AuthMiddleware.cpp
src/model/: AddressModel.cpp  CarrierModel.cpp  CategoryModel.cpp  InventoryModel.cpp  OrderItemModel.cpp  OrderModel.cpp  PaymentAttemptModel.cpp  ProductModel.cpp  UserModel.cpp
src/router/: Router.cpp
src/server/: Server.cpp
src/services/: PaypalService.cpp
src/services/jwt/: Auth0JwtUtils.cpp  JwtService.cpp
src/utils/: UtilsOwner.cpp
